<resources>
    <string name="app_name">YokaiNoMori</string>
    <string name="win">Vous avez gagné !</string>
    <string name="pause">pause</string>
    <string name="dialog_evolution_title">Promotion</string>
    <string name="dialog_evolution_message">La pièce que vous venez de déplacer peut être promue !</string>
    <string name="dialog_evolution_question">Voulez-vous la promouvoir ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="see_the_game">Voir le jeu</string>
    <string name="quit">Quitter</string>
    <string name="replay">Recommencer</string>
    <string name="options">Options</string>
    <string name="resume">Reprendre</string>
    <string name="draw">Match nul !</string>
    <string name="declarer_nul">Déclarer match nul</string>
    <string name="options_game_title">Options de jeu</string>
    <string name="mode">Mode de jeu :</string>
    <string name="cancel">Annuler</string>
    <string name="launch">Lancer la partie</string>
    <string name="texte_bouton_jouer">Jouer</string>
    <string name="texte_bouton_credits">Crédits</string>
    <string name="texte_bouton_regles">Règles</string>
    <string name="texte_bouton_quitter">Quitter</string>
    <string name="back">Retour</string>
    <string name="exit">Êtes-vous sûr de vouloir quitter ?</string>
    <string name="text_credits1">L\'application mobile du YokaiNoMori a été crée par Nicolas Bourdin, Camille Police, Lionel Jouin et Riwal Le Faou.</string>
    <string name="text_credits2">Ce jeu mobile a été crée dans le cadre du projet tuteuré du troisième semestre DUT Informatique de l\'IUT de Laval.</string>
    <string name="text_credits3">Le jeu s\'inspire du jeu de plateau appelé YokaiNoMori.\nCe jeu inspiré du Shogi, variante japonaise des échecs, a été crée par Madoka Kitao. Le Yokaï no mori est distribué en France par l\'éditeur de jeu FERTI</string>
    <string name="text_credits4">Les logos utilisés ont été recupérés sur flaticon.</string>
</resources>
