<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialogBackground"
    android:alpha="0.9">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:src="@drawable/settings"
            android:adjustViewBounds="true"
            android:alpha="0.8"/>
        <TextView
            android:layout_marginLeft="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/options_game_title"
            android:textStyle="bold"
            android:alpha="0.85"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="24dp"
                        android:textSize="15sp"
                        android:text="@string/mode"
                        android:alpha="0.8"
                        android:textColor="#ffffff"/>
            <Spinner
                android:id="@+id/spinnerMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></Space>
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="64dp"
                    android:text="@string/cancel"
                    android:padding="8dp"
                    android:background="@drawable/custom_button"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="8dp"/>
                <Button
                    android:id="@+id/launch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="64dp"
                    android:text="@string/launch"
                    android:padding="8dp"
                    android:background="@drawable/custom_button"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>